Update from Fidus Writer

--- a/epub/EPUB/document-13.xhtml
+++ b/epub/EPUB/document-13.xhtml
@@ -1,1 +1,137 @@
-undefined
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de" xmlns:epub="http://www.idpf.org/2007/ops">
+  <head>
+    <title>CRI11Annex – Checklist as a planning guide for hospitals</title>
+    <link rel="stylesheet" type="text/css" href="css/document.css" />
+    <link rel="stylesheet" type="text/css" href="css/aogPdf.css" />
+  </head>
+  <body class="content" data-title="CRI11Annex – Checklist as a planning guide for hospitals">
+    <div class="article-part article-title" id="_13_0">CRI11Annex – Checklist as a planning guide for hospitals</div>
+    <div class="article-part article-heading article-subtitle" data-hidden="true" />
+    <div class="article-part article-contributors article-authors" data-hidden="true" />
+    <div class="article-part article-richtext article-abstract" data-hidden="true" />
+    <div class="article-part article-tags article-keywords" data-hidden="true" />
+    <div class="article-part article-richtext article-body">
+      <p />
+      <p>The checklist below is based on the content of Germany's National Pandemic Preparedness Plan Part I e<a href="file:///C:\Users\boesl_reg\AppData\Local\Microsoft\Windows\INetCache\Content.Outlook\SFW45WES\(https:\edoc.rki.de\handle\176904\187%20–%20German%20only)">(https://edoc.rki.de/handle/176904/187 – German only).</a></p>
+      <p />
+      <p> </p>
+      <table id="T49784491" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+        <caption><span class="label"/></caption>
+        <tbody>
+          <tr>
+            <td>
+              <p><em><strong>Title:</strong></em></p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p><em><strong>Planning guide for hospitals</strong></em></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p>Target group</p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p>Date</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p> </p>
+      <h3 id="H7945097">Background</h3>
+      <p>In a widespread endemic/pandemic it is to be assumed that, compared to a limited outbreak, the total number of sick people as well as the proportion of seriously ill patients will be significantly higher. Consequently, an increased burden on inpatient hospital care is to be expected, and capacities may be overstretched.</p>
+      <p><em><strong>BUT: Doctors, nurses and other hospital staff may themselves be absent due to illness, and existing capacities can also be limited in this way.</strong></em></p>
+      <p>The massive influx of patients requiring inpatient treatment, some of whom require intensive care/ventilation, requires hospitals to clearly define organisational measures in order to ensure that these needs can be met.</p>
+      <p>Planning and preparation at the local/sub-regional level require the involvement of all crisis and disaster response structures. </p>
+      <h3 id="H3752751">Preparatory measures</h3>
+      <p>☐   Vaccinate staff against seasonal influenza</p>
+      <p>☐   Align contingency plans, particularly for hospitals and public health offices, with pandemic preparedness plan</p>
+      <p>☐   Inform and train staff on contingency plans and hygiene management</p>
+      <h3 id="H2170902"><br />Organisational measures to ensure inpatient care</h3>
+      <p>☐   Create/increase bed capacities for additional patients</p>
+      <p>☐   Suspend elective admissions</p>
+      <p>☐   Discharge patients as soon as possible</p>
+      <p>☐   Involve other wards (e.g. dermatology, ophthalmology – taking into account pandemic-specific requirements)</p>
+      <h3 id="H8420461">HR management</h3>
+      <p>☐   Increase human resources (e.g. redeploy personnel from areas which now tie up fewer staff due to suspension of elective admissions; include medical students in their final year of training etc.)</p>
+      <p>☐   Exclude staff with symptoms from patient care</p>
+      <h3 id="H3837555">Stockpiling/management strategy for rapid procurement in case of an incident</h3>
+      <p>☐   Antibiotics, analgesics, sedatives</p>
+      <p>☐   Disinfectants</p>
+      <p>☐   Personal protective equipment (PPE):</p>
+      <p>☐   ☐ disposable gloves </p>
+      <p>☐   ☐ surgical masks</p>
+      <p>☐   ☐ FFP2 masks/FFP3 masks </p>
+      <h3 id="H5485324">Inform and train staff</h3>
+      <p>☐ Regularly refresh level of information of staff: </p>
+      <p>☐   ☐ organisational preparations</p>
+      <p>☐   ☐ schedules </p>
+      <p>☐   ☐ hygiene management</p>
+      <p>☐   Specific training in patient treatment and care for staff redeployed from other areas</p>
+      <h3 id="H2576398">Measures for personal protection</h3>
+      <p>☐   Anti-viral prophylaxis, where appropriate</p>
+      <p>☐   Vaccination, where appropriate </p>
+      <h3 id="H2443189">Equipment of treatment units</h3>
+      <p>☐   Cohort isolation must be possible; i.e. 'ward sluice' or sluice in foyer of a building used in its entirety as a treatment unit</p>
+      <p>☐   The ventilation system should be checked in order to ascertain what measures can be taken to prevent further spread into other areas of the hospital.</p>
+      <p>☐   Possibility of oxygen supply (if possible a central supply)</p>
+      <p>☐   Ventilation beds</p>
+      <p>☐   Medical equipment (e.g. catheters, infusion devices, medicines)</p>
+      <p>☐   X-ray units (including mobile X-ray machines)</p>
+      <p>☐   Ultrasound, ECG, defibrillator unit, pulse oximetry  </p>
+      <h3 id="H5831071">Organisation</h3>
+      <p>☐   Separate area for admission of infectious patients</p>
+      <p>☐   Check indication for admission </p>
+      <p>☐   Separate treatment area from remaining care provision, if possible also include X-ray area </p>
+      <p>☐   The treatment area should include an ICU. </p>
+      <p>☐   Manage bed capacities </p>
+      <h3 id="H9502955">Hygiene measures in the hospital </h3>
+      <p>The following sources provide important technical recommendations:</p>
+      <p>☐   RKI: Recommendation of the RKI for hygiene measures in patients with suspected or proven influenza</p>
+      <p>☐   BAuA: Resolution 609 – Occupational safety and health when influenza occurs, with a particular focus on respiratory protection </p>
+      <p>In addition, hygiene plans should also be reviewed.</p>
+      <p>☐   Personal protective measures for medical staff</p>
+      <p>☐   Waste disposal according to waste code AS 180104 pursuant to LAGA </p>
+      <p>☐   Internal patient transport</p>
+      <p>If possible the patient should wear a surgical mask, and staff should wear protective clothing and a respirator mask. Contact surfaces and means of transport must be disinfected immediately after transport.</p>
+      <p>☐   Dealing with the deceased </p>
+      <p>Handling the remains of deceased COVID-19 patients (as of 4 March 2020) does not require special containment as in the case of highly contagious infectious diseases of a different aetiology. When standard hygiene rules are applied, handling infectious corpses does not pose a particular risk of infection. Unprotected contact with secretions that contain pathogens should generally be avoided.</p>
+      <table id="T33400041" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+        <caption><span class="label"/></caption>
+        <tbody>
+          <tr>
+            <td>
+              <p><em><strong>Institution:</strong></em></p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p><em><strong>Version:</strong></em></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p>Prepared by:</p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p>Filed under:</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p> </p>
+      <p> </p>
+    </div>
+    <section class="fnlist" role="doc-endnotes" />
+  </body>
+</html>
