Update from Fidus Writer

--- a/epub/EPUB/document-11.xhtml
+++ b/epub/EPUB/document-11.xhtml
@@ -1,1 +1,119 @@
-undefined
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de" xmlns:epub="http://www.idpf.org/2007/ops">
+  <head>
+    <title>CRI11Annex – Checklist for infrastructure and resources in the crisis team</title>
+    <link rel="stylesheet" type="text/css" href="css/document.css" />
+    <link rel="stylesheet" type="text/css" href="css/aogPdf.css" />
+  </head>
+  <body class="content" data-title="CRI11Annex – Checklist for infrastructure and resources in the crisis team">
+    <div class="article-part article-title" id="_11_0">CRI11Annex – Checklist for infrastructure and resources in the crisis team</div>
+    <div class="article-part article-heading article-subtitle" data-hidden="true" />
+    <div class="article-part article-contributors article-authors" data-hidden="true" />
+    <div class="article-part article-richtext article-abstract" data-hidden="true" />
+    <div class="article-part article-tags article-keywords" data-hidden="true" />
+    <div class="article-part article-richtext article-body">
+      <p />
+      <p> </p>
+      <p> </p>
+      <table id="T54913031" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+        <caption><span class="label"/></caption>
+        <tbody>
+          <tr>
+            <td>
+              <p><em><strong>Topic?</strong></em></p>
+            </td>
+            <td>
+              <p><em><strong>Title:</strong></em></p>
+            </td>
+            <td>
+              <p><em><strong>Infrastructure and resources in the crisis team</strong></em></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p>Target group: </p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p>Date:</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p>                                                         </p>
+      <h3 id="H4260866">Rooms</h3>
+      <p>☐   Prepare room for the work of the team</p>
+      <p>☐   Prepare room for discussions of the situation</p>
+      <p>☐   Prepare IT equipment</p>
+      <p>☐   Organise keys</p>
+      <h3 id="H5650686">IT equipment</h3>
+      <p>☐   Provide additional i-workstations (notebooks)</p>
+      <p>☐   Install copier and printer near the team room</p>
+      <p>☐   Have the beamer ready</p>
+      <p>☐   Set up group mailbox for the team</p>
+      <p>☐   Create a central data directory</p>
+      <p>☐   Create accounts by function</p>
+      <p>☐   Set up access to Twitter and Facebook and check availability at the workplace</p>
+      <p>☐   Redundant IT connection independent of the in-house network</p>
+      <h3 id="H9723828">Telephone and fax</h3>
+      <p>☐   Have special telephone connections ready for crises</p>
+      <p>☐   Have special fax connections ready for crises</p>
+      <p>☐   Define and communicate point of availability of team</p>
+      <p>☐   Staffing to ensure point of availability of team </p>
+      <p>☐   Set up answering machine for point of availability of team</p>
+      <p>☐   Set up hunt group for a hotline (with answering machine)</p>
+      <p>☐   Make technical preparations for call forwarding (handling instruction)</p>
+      <p>☐   Have telephone set ready for conference calls</p>
+      <p>☐   Create redundant telephone facilities (landline independent of in-house network and/or additional mobile phones - prepaid, to be activated in case of emergency) </p>
+      <h3 id="H4829806">Office equipment/technology</h3>
+      <p>☐   Board, flipchart for presenting the situation</p>
+      <p>☐   Whiteboard for team room</p>
+      <p>☐   Board for documenting tasks</p>
+      <p>☐   Install copier and printer near the team room</p>
+      <p>☐   Cloakroom lockers for external staff</p>
+      <p>☐   Hang clocks in team room</p>
+      <h3 id="H3998633">Materials</h3>
+      <p>☐   Provide basic office supplies</p>
+      <p>☐   Presentation case</p>
+      <p>☐   Crockery, glasses, coffee machine</p>
+      <p>☐   Maps (possibly electronic)</p>
+      <h3 id="H1955050">Templates</h3>
+      <p> ☐   Prepare distribution lists and update them in an emergency</p>
+      <p>☐   Template for memos</p>
+      <p>☐   Template for mission diary</p>
+      <p>☐   Template for minutes</p>
+      <p> </p>
+      <table id="T97609181" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+        <caption><span class="label"/></caption>
+        <tbody>
+          <tr>
+            <td>
+              <p><em><strong>Institution:</strong></em></p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p><em><strong>Version:</strong></em></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p>Prepared by: </p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p>Filed under:</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p>                                                           </p>
+    </div>
+    <section class="fnlist" role="doc-endnotes" />
+  </body>
+</html>
