Update from Fidus Writer

--- a/epub/EPUB/document-12.xhtml
+++ b/epub/EPUB/document-12.xhtml
@@ -1,1 +1,118 @@
-undefined
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de" xmlns:epub="http://www.idpf.org/2007/ops">
+  <head>
+    <title>CRI11Annex – Checklist as a planning guide for public health offices</title>
+    <link rel="stylesheet" type="text/css" href="css/document.css" />
+    <link rel="stylesheet" type="text/css" href="css/aogPdf.css" />
+  </head>
+  <body class="content" data-title="CRI11Annex – Checklist as a planning guide for public health offices">
+    <div class="article-part article-title" id="_12_0">CRI11Annex – Checklist as a planning guide for public health offices</div>
+    <div class="article-part article-heading article-subtitle" data-hidden="true" />
+    <div class="article-part article-contributors article-authors" data-hidden="true" />
+    <div class="article-part article-richtext article-abstract" data-hidden="true" />
+    <div class="article-part article-tags article-keywords" data-hidden="true" />
+    <div class="article-part article-richtext article-body">
+      <p />
+      <p> </p>
+      <table id="T42285431" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+        <caption><span class="label"/></caption>
+        <tbody>
+          <tr>
+            <td>
+              <p><em><strong>Topic?</strong></em> </p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p><em><strong>Title: Planning guide for public health offices</strong></em></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p>Target group: </p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p>Date:</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p>   </p>
+      <h3 id="H2442121">Coordination</h3>
+      <p>☐   Situation-dependent decision on internal management structure</p>
+      <p>☐   Coordination of measures</p>
+      <p>☐   Documentation and evaluation</p>
+      <p>☐   Ongoing evaluation of the incident</p>
+      <p>☐   Demobilisation</p>
+      <h3 id="H3384617">Risk management</h3>
+      <p>☐   Risk assessment </p>
+      <h3 id="H9541090">HR management</h3>
+      <p>☐   Increase human resources (e.g. redeploy personnel from areas which now tie up fewer staff due to suspension of elective admissions; include medical students in their final year of training etc.)</p>
+      <p>☐   Exclude staff with symptoms from patient care</p>
+      <h3 id="H1662235">Communications</h3>
+      <p>☐   Risk and crisis communication</p>
+      <p>☐   Internal communication within the municipality</p>
+      <p>☐   Public information</p>
+      <p>☐   Prepare press work professionally, possibly set up hotline </p>
+      <h3 id="H6402131">Outbreak investigation </h3>
+      <p>☐   Occupational safety and health, ensure provision of personal protective equipment</p>
+      <p>☐   Routine epidemiological surveillance</p>
+      <p>☐   Identify contacts, categorise contacts</p>
+      <p>☐   Define anti-epidemic measures pursuant to IfSG</p>
+      <p>☐   Order diagnostic measures and decide on scope of investigation</p>
+      <p>☐   Make arrangements for sampling and sample transport</p>
+      <p>☐   Protective measures to reduce contacts</p>
+      <p>☐   Organise and monitor the patient</p>
+      <p>☐   Define and monitor isolation arrangements </p>
+      <p>☐   Decide on nature and scope of disinfection measures and their monitoring</p>
+      <p>☐   Decide on decontamination measures, if applicable </p>
+      <h3 id="H4067619">Advice</h3>
+      <p>☐   Advise affected persons on what to do</p>
+      <p>☐   Inform and advise other public authorities, institutions and the public</p>
+      <p>☐   Set up hotline</p>
+      <h3 id="H7293213">REGULATORY TASKS</h3>
+      <p>☐   Ordering of isolation by the medical officer</p>
+      <p>☐   Ordering of autopsy, certification of death, oversight of transport of corpses and cremation</p>
+      <p>☐   Ordering of prohibitions on activities, participation and visits</p>
+      <p>☐   Ordering of quarantine and isolation</p>
+      <p>☐   Disposal management</p>
+      <p>☐   Possibly coordination of vaccinations</p>
+      <p>☐   Possibly organisation of post-exposure prophylaxis</p>
+      <table id="T61201601" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+        <caption><span class="label"/></caption>
+        <tbody>
+          <tr>
+            <td>
+              <p><em><strong>Institution:</strong></em></p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p><em><strong>Version:</strong></em></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p>Prepared by:</p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p> Filed under:</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p> </p>
+      <p> </p>
+      <p> </p>
+    </div>
+    <section class="fnlist" role="doc-endnotes" />
+  </body>
+</html>
