Update from Fidus Writer

--- a/epub/EPUB/document-14.xhtml
+++ b/epub/EPUB/document-14.xhtml
@@ -1,1 +1,131 @@
-undefined
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de" xmlns:epub="http://www.idpf.org/2007/ops">
+  <head>
+    <title>CRI11Annex – Checklist for communications</title>
+    <link rel="stylesheet" type="text/css" href="css/document.css" />
+    <link rel="stylesheet" type="text/css" href="css/aogPdf.css" />
+  </head>
+  <body class="content" data-title="CRI11Annex – Checklist for communications">
+    <div class="article-part article-title" id="_14_0">CRI11Annex – Checklist for communications</div>
+    <div class="article-part article-heading article-subtitle" data-hidden="true" />
+    <div class="article-part article-contributors article-authors" data-hidden="true" />
+    <div class="article-part article-richtext article-abstract" data-hidden="true" />
+    <div class="article-part article-tags article-keywords" data-hidden="true" />
+    <div class="article-part article-richtext article-body">
+      <p />
+      <p> </p>
+      <table id="T19470581" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+        <caption><span class="label"/></caption>
+        <tbody>
+          <tr>
+            <td>
+              <p><em><strong>Topic?</strong></em></p>
+            </td>
+            <td>
+              <p><em><strong>Title:</strong></em></p>
+            </td>
+            <td>
+              <p><em><strong>Communications</strong></em></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p>Target group: </p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p>Date:</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p> </p>
+      <h3 id="H3683887">Selecting the form of communication</h3>
+      <p>☐   Press release</p>
+      <p>☐   Press conference/expert interview</p>
+      <p>☐   Hotline</p>
+      <p>☐   FAQs</p>
+      <p>☐   Website of the administrative unit</p>
+      <p>☐   Social media (e.g. Twitter, Instagram) </p>
+      <h3 id="H351953">Content-related preparation </h3>
+      <p>☐   What is the current situation?</p>
+      <p>☐   What has happened, when and where?</p>
+      <p>☐   What damage has been caused?</p>
+      <p>☐   How many people (number) are affected?</p>
+      <p>☐   How is a situation likely to develop? Best case vs. worst case</p>
+      <p>☐   What action has been taken so far by the authorities?</p>
+      <p>☐   What are the authorities planning to do? Activities?</p>
+      <p>☐   Who will be affected? What (behavioural) rules follow as a result of the incident?</p>
+      <p>☐   What specialist information is relevant?</p>
+      <p>☐   What information do regional/national bodies have in reserve?</p>
+      <p>☐   What easy-to-understand information is relevant? </p>
+      <p>☐   What are the most important messages for the general public?</p>
+      <h3 id="H7689813">Press release</h3>
+      <p>☐   What? When? Where? Who? </p>
+      <p>☐   Contact person </p>
+      <p>☐   Date, time if known</p>
+      <p>☐   Website, social media, further information and contact data if available </p>
+      <p>☐   Press spokesperson</p>
+      <p>☐   Other competent contacts, e.g. fire service, police, (higher) public health authorities, senate department</p>
+      <p />
+      <h2 id="H59697">Checklist – press conference</h2>
+      <p>(based on preliminary work by Christoph Lang, former Director of the Press Office, Senate Department for Health and Equality)</p>
+      <h3 id="H6901633">Invitation</h3>
+      <p>☐   Specified time, location and duration </p>
+      <p>☐   Support for media representatives (possibly on site)</p>
+      <p>☐   Designate room for individual interviews (radio, podcasts, television)</p>
+      <p>☐   Prepare press folder</p>
+      <p>☐   Specify briefed interview partners</p>
+      <p>☐   Determine telephone availability  </p>
+      <h3 id="H5004432">Cordons/restrictions on access</h3>
+      <p> ☐   Briefing for security services</p>
+      <h3 id="H3108982">Press room</h3>
+      <p>☐   Catering (e.g. beverages, snacks, for example sandwiches)</p>
+      <p>☐   Work facilities: chairs and desks</p>
+      <p>☐   Some power outlets (provide multi-sockets if needed) for charging smartphones and notebooks</p>
+      <p>☐   Ideally also WLAN (provide access codes if necessary)</p>
+      <p>☐   Prepare screens/pinboards and flipcharts</p>
+      <p>☐   Specify TV-appropriate background for interviews</p>
+      <h3 id="H6595140">Support for journalists</h3>
+      <p>☐   Trained officer (press spokesperson) permanently available</p>
+      <p>☐   Alternative -– officer permanently on call?</p>
+      <p>☐   Specify telephone availability, possibly hotline</p>
+      <h3 id="H8837330">Regular press briefings</h3>
+      <p>☐   Who talks? </p>
+      <p>☐   Are the relevant persons informed? </p>
+      <p>☐   Media training completed?</p>
+      <p>☐   Experts on site? In contact with media representatives?</p>
+      <table id="T70486011" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+        <caption><span class="label"/></caption>
+        <tbody>
+          <tr>
+            <td>
+              <p><em><strong>Institution:</strong></em>  </p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p><em><strong>Version:</strong></em></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p>Prepared by: </p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p>Filed under:</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p> </p>
+    </div>
+    <section class="fnlist" role="doc-endnotes" />
+  </body>
+</html>
