Update from Fidus Writer

--- a/epub/EPUB/document-15.xhtml
+++ b/epub/EPUB/document-15.xhtml
@@ -1,1 +1,179 @@
-undefined
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de" xmlns:epub="http://www.idpf.org/2007/ops">
+  <head>
+    <title>CRI11Annex – Template for mission diary</title>
+    <link rel="stylesheet" type="text/css" href="css/document.css" />
+    <link rel="stylesheet" type="text/css" href="css/aogPdf.css" />
+  </head>
+  <body class="content" data-title="CRI11Annex – Template for mission diary">
+    <div class="article-part article-title" id="_15_0">CRI11Annex – Template for mission diary</div>
+    <div class="article-part article-heading article-subtitle" data-hidden="true" />
+    <div class="article-part article-contributors article-authors" data-hidden="true" />
+    <div class="article-part article-richtext article-abstract" data-hidden="true" />
+    <div class="article-part article-tags article-keywords" data-hidden="true" />
+    <div class="article-part article-richtext article-body">
+      <p />
+      <p>Title/heading</p>
+      <p> </p>
+      <table id="T38592111" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+        <caption><span class="label"/></caption>
+        <tbody>
+          <tr>
+            <td>
+              <p><em><strong>date / time</strong></em></p>
+            </td>
+            <td>
+              <p><em><strong>Incident /</strong></em></p>
+            </td>
+            <td>
+              <p><em><strong>Info</strong></em></p>
+            </td>
+            <td>
+              <p><em><strong>Task</strong></em></p>
+            </td>
+            <td>
+              <p><em><strong>Completed</strong></em></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p><em><strong>decision</strong></em></p>
+            </td>
+            <td>
+              <p><em>from</em></p>
+            </td>
+            <td>
+              <p><em>for</em></p>
+            </td>
+            <td>
+              <p><em><strong>date / time</strong></em></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p />
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <section class="fnlist" role="doc-endnotes" />
+  </body>
+</html>
