--- a/epub/EPUB/document-16.xhtml
+++ b/epub/EPUB/document-16.xhtml
@@ -1,1 +1,104 @@
-undefined
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de" xmlns:epub="http://www.idpf.org/2007/ops">
+  <head>
+    <title>CRI11Annex – Template for checklist format</title>
+    <link rel="stylesheet" type="text/css" href="css/document.css" />
+    <link rel="stylesheet" type="text/css" href="css/aogPdf.css" />
+  </head>
+  <body class="content" data-title="CRI11Annex – Template for checklist format">
+    <div class="article-part article-title" id="_16_0">CRI11Annex – Template for checklist format</div>
+    <div class="article-part article-heading article-subtitle" data-hidden="true" />
+    <div class="article-part article-contributors article-authors" data-hidden="true" />
+    <div class="article-part article-richtext article-abstract" data-hidden="true" />
+    <div class="article-part article-tags article-keywords" data-hidden="true" />
+    <div class="article-part article-richtext article-body">
+      <p />
+      <p>Below is a template which you can use to develop your own checklists.</p>
+      <p> </p>
+      <h3 id="H9231130">Checklist – TITLE (template for checklist format)</h3>
+      <p><strong>Header</strong></p>
+      <p> </p>
+      <table id="T89943551" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+        <caption><span class="label"/></caption>
+        <tbody>
+          <tr>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p><em><strong>Title:</strong></em></p>
+            </td>
+            <td>
+              <p><em><strong>Brief and concise</strong></em></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p><em><strong>What is the overriding theme? (A checklist should contain at least the following information)</strong></em></p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p>Target groups (e.g. all creators of the checklist)</p>
+            </td>
+            <td>
+              <p> </p>
+            </td>
+            <td>
+              <p>Date (DAY.MONTH.YEAR, 04/03/2020)</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p> </p>
+      <p>Checklists are not a panacea. They do not replace your specific knowledge or your creative solutions to problems. However, they can be very useful in terms of providing support and alleviating the workload when repetitive tasks are a feature of everyday work </p>
+      <p><strong>BUT: One drawback with checklists is that as you work through them, you might overlook something that's not on  the list</strong>.</p>
+      <h3 id="H1070827">Why do I need checklists?</h3>
+      <p>☐   to ensure that nothing is forgotten</p>
+      <p>☐   to provide an overview of complex issues</p>
+      <p>☐   to support structured processing and the orderly completion of tasks</p>
+      <p>☐   to divide complex tax into manageable chunks</p>
+      <p>☐   to enable workflows to be standardised and to promote efficiency </p>
+      <p>☐   to create an overview and help control and document work processes by 'ticking off' completed tasks</p>
+      <p>☐   to facilitate the delegation of tasks to deputies</p>
+      <p> </p>
+      <h3 id="H6679445">How do I create a checklist?</h3>
+      <p>☐   Create your own individual template in which the following information is always included: title of respective checklist, name of the institution, name of the person completing the form, date and/or version. In addition, you can also enter where the checklist is filed/stored.</p>
+      <p>☐   Drawing up a task list: </p>
+      <p>1. Write down all the relevant points/work steps</p>
+      <p>2. Discuss with colleagues/superiors and check for completeness</p>
+      <p>3. Arrange themes chronologically</p>
+      <p>☐   The best test of your list is to try it out in practice. If you are working on a special case for the first time, it will probably not yet run perfectly – this gives you an opportunity to revise the checklist.</p>
+      <p> </p>
+      <p><strong>FOOTER</strong></p>
+      <table id="T94699061" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+        <caption><span class="label"/></caption>
+        <tbody>
+          <tr>
+            <td>
+              <p><em><strong>Institution (e.g. PUBLIC HEALTH OFFICE,LEIPZIG)</strong></em></p>
+            </td>
+            <td>
+              <p><em><strong>Version: (REV_01)</strong></em></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p>Created by: (MAXIMA JANE DOE)</p>
+            </td>
+            <td>
+              <p>Filed under: (c:ordnerX/ordner/xY/dateiname.doc)</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <section class="fnlist" role="doc-endnotes" />
+  </body>
+</html>
