Update from Fidus Writer

--- a/epub/EPUB/document-18.xhtml
+++ b/epub/EPUB/document-18.xhtml
@@ -1,1 +1,26 @@
-undefined
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de" xmlns:epub="http://www.idpf.org/2007/ops">
+  <head>
+    <title>CRIbib Bibliography</title>
+    <link rel="stylesheet" type="text/css" href="css/document.css" />
+    <link rel="stylesheet" type="text/css" href="css/aogPdf.css" />
+  </head>
+  <body class="content" data-title="CRIbib Bibliography">
+    <div class="article-part article-title" id="_18_0">CRIbib Bibliography</div>
+    <div class="article-part article-heading article-subtitle" data-hidden="true" />
+    <div class="article-part article-contributors article-authors" data-hidden="true" />
+    <div class="article-part article-richtext article-abstract" data-hidden="true" />
+    <div class="article-part article-tags article-keywords" data-hidden="true" />
+    <div class="article-part article-richtext article-body">
+      <h2 id="H8291970">Communications</h2>
+      <p>Bundesamt für Bevölkerungsschutz und Katastrophenhilfe 2011. "BBK-Glossar: Ausgewählte Zentrale Begriffe Des Bevölkerungsschutzes." (<em>Glossary: Selected key terms in population protection</em>). Edited by Bundesamt für Bevölkerungsschutz und Katastrophenhilfe. <em>Website. </em>https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Praxis_Bevoelkerungsschutz/Glossar_2018.pdf.</p>
+      <p>———. 2018. "Ratgeber Für Notfallvorsorge Und Richtiges Handeln in Notsituationen." (<em>Advice on emergency preparedness and what to do in an emergency</em>) 2018. https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/ Broschueren_Flyer/Buergerinformationen_A4/Ratgeber_Brosch.pdf.</p>
+      <p>Wegwarth, Odette; Gigerenzer, Gerd, Dtsch Arztebl. 2011. "Https://www.Aerzteblatt.de/Archiv/81152/Risikokommunikation-Risiken-Und-Unsicherheiten-Richtig-Verstehen-Lernen." Risikokommunikation: Risiken Und Unsicherheiten Richtig Verstehen Lernen, (<em>Risk communication – Learning to understand risks and uncertainties correctly</em>) 2011.</p>
+      <h2 id="H6136407">Toolbox</h2>
+      <p>AFKzV. 2012. "<strong>Einheiten Im ABC – Einsatz</strong>" (<em>Units deployed on CBRN operations</em>).</p>
+      <p>RKI, 2020. n.d.</p>
+      <p>https://www.rki.de/DE/Content/Institut/OrgEinheiten/Abt3/FG32/FG32_node.html.</p>
+    </div>
+    <section class="fnlist" role="doc-endnotes" />
+  </body>
+</html>
